src/k8s/apps/uptime-kuma/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: uptime-kuma
spec:
  redirectScheme:
    scheme: https
    permanent: true
